[package]
name = "swarm-wasm-sandbox"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
blake3 = "1"
ctor = { version = "0.2", optional = true }
libc = { version = "0.2", optional = true }
thiserror = "2"
wasmparser = "0.226"
wasmtime = "45"

[features]
default = []
os-isolation = ["dep:ctor", "dep:libc"]
os-cgroup = ["os-isolation"]
os-network-namespace = ["os-isolation"]
os-readonly-root = ["os-isolation"]
os-seccomp = ["os-isolation"]
os-tmpfs = ["os-isolation"]

[dev-dependencies]
wat = "1"
